# kao-legal

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.api  LICENSE  README.md  pyproject.toml
PRPs/: INIT.md  legal-advisor-agent.md
frontend/landing-page/: package-lock.json  package.json
frontend/landing-page/src/app/: layout.tsx  page.tsx
frontend/landing-page/src/components/: AuthProvider.tsx  DocumentUpload.tsx  MeetingSummaryForm.tsx
frontend/landing-page/src/lib/: amplify-config.ts  api.ts
infra/: app.py  cdk.context.json
infra/stacks/: __init__.py  agent_stack.py  api_stack.py  auth_stack.py  storage_stack.py
src/: conftest.py
src/kao_legal/: __init__.py
src/kao_legal/agents/: document_intake_workflow.py  legal_advisor_agent.py  meeting_summary_workflow.py  worker.py
src/kao_legal/agents/tests/: test_document_intake_workflow.py  test_meeting_summary_workflow.py
src/kao_legal/api/: app.py
src/kao_legal/api/middleware/: auth.py
src/kao_legal/api/routes/: credits.py  documents.py  jobs.py  meeting.py  webhooks.py
src/kao_legal/api/tests/: test_credits.py  test_meeting.py
src/kao_legal/config/: __init__.py  settings.py
src/kao_legal/config/tests/: test_settings.py
src/kao_legal/observability/: __init__.py  logging.py  token_tracking.py
src/kao_legal/prompts/: document_intake_prompt.txt  meeting_summary_prompt.txt  system_prompt.txt
src/kao_legal/tools/: anonymization_tool.py  email_draft_tool.py  meeting_notes_tool.py  s3_document_tool.py  summary_export_tool.py
src/kao_legal/tools/tests/: test_anonymization_tool.py  (+3 more)
(+6 files in other folders)
